# igusMotionEditor

./: Beschreibung der IME software.doc  README.md  index.html  params.json
Drivers/: NanoJMotorControl.java
Program/: NanoJMotorControl.java  styles.css
Program/calibs/: robot_5.ini
Program/microcontroller/: bootloader.hex  microcontroller.hex
Program/motions/: testmotion3.txt  testmotion4.txt
Source/: .cproject  .project  FlowLayout.cpp  FlowLayout.h  IgusMotionEditor.cpp  IgusMotionEditor.h  IgusMotionEditor.pro  JointConfiguration.cpp  JointConfiguration.h  Joystick.h  JoystickControl.cpp  JoystickControl.h  JoystickWin.cpp  Keyframe.cpp  Keyframe.h  KeyframeArea.cpp  KeyframeArea.h  KeyframeEditor.cpp  KeyframeEditor.h  KeyframeEditor.ui  KeyframePlayer.cpp  KeyframePlayer.h  KeyframePlayerItem.cpp  KeyframePlayerItem.h  ResettableSlider.cpp  ResettableSlider.h  RobotInterface.cpp  RobotInterface.h  RobotView3D.cpp  RobotView3D.h  Serial.cpp  Serial.h  ViewJoint.cpp  ViewJoint.h  globals.h  igusmotioneditor.ui  main.cpp  plotcommand.txt  release.bat  svn_tpl.bat
Source/calibs/: robot.ini
Source/doc/: MotionEditorHandbook.doc  slides.ppt
Source/flashtool/: flashtool.cpp  flashtool.h  flashtool.pro  flashtool.ui  main.cpp
Source/microcontroller/: CMakeLists.txt  combuf.cpp  combuf.h  commands.cpp  commands.h  genreset.cpp  io.cpp  io.h  main.cpp  mem.cpp  mem.h  microcontroller.hex  motion.cpp  motion.h  nanotec.cpp  nanotec.h  protocol.h  uart.cpp  uart.h  writeflash.sh
Source/motions/: testmotion.txt  testmotion2.txt  testmotion5.txt
